[package]
name = "ansible-vault-lsp"
version = "0.5.0"
edition = "2021"
description = "LSP server providing inline ansible-vault encrypt/decrypt code actions"
license = "MIT"
authors = ["Dmitry Ovsianikov <dmitriy.ovsianikov@icloud.com>"]
repository = "https://github.com/dimao/ansible-vault-zed"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
aes = "0.8"
ctr = "0.9"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
dirs = "5"

[profile.release]
lto = true
strip = true
